--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
+# Byte-compiled / optimized / DLL files
+_pycache_/
+*.py[cod]
+*.so
+
+# Virtual environments
+venv/
 .venv/
-__pycache__/
+
+# VS Code settings
+.vscode/
+
+# Environment/IDE
 .idea/
-*.pyc
+*.env
+
+# macOS
 .DS_Store
-.idea/
+
+# Model and data files (optional)
 *.pkl
 *.h5
 *.pt
+*.csv
+
+# Logs
+*.log
